--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi, I am Salih Yanikgonul.</h1>
-				<p>I'm a 4th year PhD student working on single-photon detectors and quantum optics. <a href="/about">Read more about my life...</a></p>
+				<p>I'm a 4th year PhD student at Nanyang Technological University and Institute of Materials Research and Engineering at Agency for Science, Technology and Research working on single-photon detectors and quantum optics. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
