--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi, I am Salih Yanikgonul.</h1>
-				<p>I'm a 4th year PhD student at Nanyang Technological University and Institute of Materials Research and Engineering at Agency for Science, Technology and Research working on single-photon detectors and quantum optics. <a href="/about">Read more about my life...</a></p>
+				<p>I'm a 4th year PhD student at Nanyang Technological University and 
+					Institute of Materials Research and Engineering at Agency for Science, 
+					Technology and Research  (A*STAR), Singapore. I work on single-photon detectors and quantum optics with metamaterials. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:salih001@ntu.edu.sg">email</a></li>
+        		<li><a href="https://github.com/hankquinlan">github.com/salihyanikgonul</a></li>
 			</ul>
 		</footer>
 	</body>
