--- a/index.html
+++ b/index.html
@@ -1,32 +1,10 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Salih Yanikgonul</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi, I am Salih Yanikgonul.</h1>
-				<p>I'm a 4th year PhD student at Nanyang Technological University and 
+---
+layout: default
+title: Salih Yanikgonul
+---
+<div class="blurb">
+	<h1>Hi, I am Salih Yanikgonul.</h1>
+	<p>I'm a 4th year PhD student at Nanyang Technological University and 
 					Institute of Materials Research and Engineering at Agency for Science, 
 					Technology and Research  (A*STAR), Singapore. I work on single-photon detectors and quantum optics with metamaterials. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:salih001@ntu.edu.sg">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/salihyanikgonul</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+</div><!-- /.blurb -->
