--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ title: About Salih Yanikgonul
 
 		<div class="about">
 			<h1>About</h1>
-			<p>I  Salih Yanikgonul received the B.S. degree in electrical and electronics engineering from Bogazici University, Istanbul, Turkey, in 2014. He is currently working toward the Ph.D. degree in electrical and electronics engineering with Nanyang Technological University and Institute of Materials Research and Engineering, A*STAR, Singapore. His research interests include the engineering of single-photon avalanche detectors, optical spectroscopy of diamond color centers, and quantum optics with metamaterials. His awards and honors include the Institute of Physics Singapore Outstanding Poster Award in 2019, the Singapore International Graduate Award, and Republic of Turkey Prime Ministry Outstanding Achievement Scholarship.</p>
+			<p>I received the B.S. degree in electrical and electronics engineering from Bogazici University, Istanbul, Turkey, in 2014. I am currently working toward the Ph.D. degree in electrical and electronics engineering with Nanyang Technological University and Institute of Materials Research and Engineering, A*STAR, Singapore. My research interests include the engineering of single-photon avalanche detectors, optical spectroscopy of diamond color centers, and quantum optics with metamaterials. I have been awarded with the Institute of Physics Singapore Outstanding Poster Award in 2019, the Singapore International Graduate Award, and Republic of Turkey Prime Ministry Outstanding Achievement Scholarship.</p>
 
 			<ul class="contacts">
 				<li><a href="#">@salihyanikgonul</a></li>
