--- a/about/index.html
+++ b/about/index.html
@@ -8,8 +8,8 @@ title: About Salih Yanikgonul
 			<p>I received the B.S. degree in electrical and electronics engineering from Bogazici University, Istanbul, Turkey, in 2014. I am currently working toward the Ph.D. degree in electrical and electronics engineering with Nanyang Technological University and Institute of Materials Research and Engineering, A*STAR, Singapore. My research interests include the engineering of single-photon avalanche detectors, optical spectroscopy of diamond color centers, and quantum optics with metamaterials. I have been awarded with the Institute of Physics Singapore Outstanding Poster Award in 2019, the Singapore International Graduate Award, and Republic of Turkey Prime Ministry Outstanding Achievement Scholarship.</p>
 
 			<ul class="contacts">
-				<li><a href="https://twitter.com/salihyanikgonul?lang=en">Twitter account</a></li>
-				<li><a href="https://scholar.google.com/citations?user=f0PW5J8AAAAJ&hl=en">Google scholar page</a></li>
+				<li><a href="https://twitter.com/salihyanikgonul?lang=en"><FONT SIZE=2>Twitter account</FONT></a></li>
+				<li><a href="https://scholar.google.com/citations?user=f0PW5J8AAAAJ&hl=en"><FONT SIZE=4>Google scholar</FONT></a></li>
 				<li><a href="http://www1.spms.ntu.edu.sg/~oson/people/salih">Departmental page</a></li>
 				</ul>
 		</div>
