--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Salih Yanikgonul
 ---
 <div class="blurb">
 	<h1>Hi, I am Salih Yanikgonul.</h1>
-	<p>I'm a 4th year PhD student at Nanyang Technological University and Institute of Materials Research and Engineering at Agency for Science, Technology and Research  (A*STAR), Singapore. I work on single-photon detectors and quantum optics with metamaterials. 
+	<p>{text-align: justify;} I'm a 4th year PhD student at Nanyang Technological University and Institute of Materials Research and Engineering at Agency for Science, Technology and Research  (A*STAR), Singapore. I work on single-photon detectors and quantum optics with metamaterials. 
 <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
