--- a/cv/index.html
+++ b/cv/index.html
@@ -6,20 +6,27 @@ title: Salih Yanikgonul's CV
 
   	<div class="cv">
 		<a href="#" class="download" title="Download CV as PDF">Download CV</a>			
-					<h1>Salih Yanikgonul</h1>
-					<address>
-					<strong>PhD candidate at Nanyang Technological University
-          School of Electrical and Electronic Engineering<strong><br>
-					50 Nanyang Ave, Singapore 639798<br>
-					City State 12345<br>
-					<abbr title="phone">P:</abbr> (+65) 8503-9272<br>
-					<span class="obfuscate">salih001@ntu.edu.sg</span>
-					</address>
+		<h1>Salih Yanikgonul</h1>
+		<address>
+		PhD candidate at Nanyang Technological University<br>
+		School of Electrical and Electronic Engineering<br>
+		50 Nanyang Ave, Singapore 639798<br>
+		<abbr title="phone">P:</abbr> (+65) 8503-9272<br>
+		<span class="obfuscate">salih001@ntu.edu.sg</span>
+		</address>
 
-					<h2>Select Publications</h2>
+		<h2>Select Publications</h2>
 
-					<p><strong>2D Monte Carlo simulation of a silicon waveguide-based single-photon avalanche diode for visible wavelengths</strong>
-          Salih Yanikgonul, Victor Leong, Jun Rong Ong, Ching Eng Png, Leonid Krivitsky
-          <a href="Opt. Express 26, 15232-15246 (2018)">https://doi.org/10.1364/OE.26.015232</a>
+		<p>2D Monte Carlo simulation of a silicon waveguide-based single-photon avalanche diode for visible wavelengths<br>
+		Salih Yanikgonul, Victor Leong, Jun Rong Ong, Ching Eng Png, Leonid Krivitsky<br>
+		<a href="https://doi.org/10.1364/OE.26.015232">Optics Express 26, 15232-15246 (2018)</a>
+			
+		<p>Simulation of Silicon Waveguide Single-Photon Avalanche Detectors for Integrated Quantum Photonics<br>
+		Salih Yanikgonul, Victor Leong, Jun Rong Ong, Ching Eng Png, Leonid Krivitsky<br>
+		<a href="https://doi.org/doi: 10.1109/JSTQE.2019.2938439">IEEE Journal of Selected Topics in Quantum Electronics, 26, 2, 1-8, (2019)</a>
+
+		<p>Quantum State Filtering of Dual-rail Photons with Fiberized Plasmonic Metamaterial<br>
+		Salih Yanikgonul, Anton N Vetlugin, Ruixiang Guo, Angelos Xomalis, Giorgio Adamo, Cesare Soci, Nikolay I Zheludev<br>
+		<a href="https://doi.org/10.1364/CLEO_QELS.2019.FTu3D.7">Conference on Lasers and Electro-Optics (CLEO): QELS_Fundamental Science, FTu3D. 7, 26, 2, 1-8, (2019)</a>
 
 	</div>
