--- a/cv/index.html
+++ b/cv/index.html
@@ -23,7 +23,7 @@ title: Salih Yanikgonul's CV
 			
 		<p>Simulation of Silicon Waveguide Single-Photon Avalanche Detectors for Integrated Quantum Photonics<br>
 		Salih Yanikgonul, Victor Leong, Jun Rong Ong, Ching Eng Png, Leonid Krivitsky<br>
-		<a href="https://doi.org/doi: 10.1109/JSTQE.2019.2938439">IEEE Journal of Selected Topics in Quantum Electronics, 26, 2, 1-8, (2019)</a>
+		<a href="https://doi.org/10.1109/JSTQE.2019.2938439">IEEE Journal of Selected Topics in Quantum Electronics, 26, 2, 1-8, (2019)</a>
 
 		<p>Quantum State Filtering of Dual-rail Photons with Fiberized Plasmonic Metamaterial<br>
 		Salih Yanikgonul, Anton N Vetlugin, Ruixiang Guo, Angelos Xomalis, Giorgio Adamo, Cesare Soci, Nikolay I Zheludev<br>
