--- a/cv/index.html
+++ b/cv/index.html
@@ -12,7 +12,7 @@ title: Salih Yanikgonul's CV
 		School of Electrical and Electronic Engineering<br>
 		50 Nanyang Ave, Singapore 639798<br>
 		<abbr title="phone">P:</abbr> (+65) 8503-9272<br>
-		<span class="obfuscate">salih001@ntu.edu.sg</span>
+		<span class="obfuscate">salih001[at]ntu.edu.sg</span>
 		</address>
 
 		<h2>Select Publications</h2>
