--- a/cv/index.html
+++ b/cv/index.html
@@ -15,6 +15,17 @@ title: Salih Yanikgonul's CV
 		<span class="obfuscate">salih001[at]ntu.edu.sg</span>
 		</address>
 
+		<div class="publications">
+			<h2>Select Publications</h2>
+			<ul class="publications">
+				<li><FONT SIZE=5>2D Monte Carlo simulation of a silicon waveguide-based single-photon avalanche diode for visible wavelengths<br>
+				Salih Yanikgonul, Victor Leong, Jun Rong Ong, Ching Eng Png, Leonid Krivitsky<br>
+				<a href="https://doi.org/10.1364/OE.26.015232">Optics Express 26, 15232-15246 (2018)</FONT></a></li>
+			<li><a href="https://scholar.google.com/citations?user=f0PW5J8AAAAJ&hl=en"><FONT SIZE=5>Google scholar</FONT></a></li>
+			<li><a href="http://www1.spms.ntu.edu.sg/~oson/people/salih"><FONT SIZE=5>Departmental page</FONT></a></li>
+		</ul>
+		</div>
+
 		<h2>Select Publications</h2>
 		<ul class="publications">
 			<li><FONT SIZE=5>2D Monte Carlo simulation of a silicon waveguide-based single-photon avalanche diode for visible wavelengths<br>
