--- a/cv/index.html
+++ b/cv/index.html
@@ -20,9 +20,9 @@ title: Salih Yanikgonul's CV
 			<ul class="publications">
 				<li><FONT SIZE=5>2D Monte Carlo simulation of a silicon waveguide-based single-photon avalanche diode for visible wavelengths<br>
 				Salih Yanikgonul, Victor Leong, Jun Rong Ong, Ching Eng Png, Leonid Krivitsky<br>
-				<a href="https://doi.org/10.1364/OE.26.015232">Optics Express 26, 15232-15246 (2018)</FONT></a></li>
-			<li><a href="https://scholar.google.com/citations?user=f0PW5J8AAAAJ&hl=en"><FONT SIZE=5>Google scholar</FONT></a></li>
-			<li><a href="http://www1.spms.ntu.edu.sg/~oson/people/salih"><FONT SIZE=5>Departmental page</FONT></a></li>
+				<a href="https://doi.org/10.1364/OE.26.015232" class="publications">Optics Express 26, 15232-15246 (2018)</FONT></a></li>
+			<li><a href="https://scholar.google.com/citations?user=f0PW5J8AAAAJ&hl=en" class="publications"><FONT SIZE=5>Google scholar</FONT></a></li>
+			<li><a href="http://www1.spms.ntu.edu.sg/~oson/people/salih" class="publications"><FONT SIZE=5>Departmental page</FONT></a></li>
 		</ul>
 		</div>
 
