--- a/cv/index.html
+++ b/cv/index.html
@@ -18,14 +18,14 @@ title: Salih Yanikgonul's CV
 		<h2>Select Publications</h2>
 		<p>2D Monte Carlo simulation of a silicon waveguide-based single-photon avalanche diode for visible wavelengths<br>
 		Salih Yanikgonul, Victor Leong, Jun Rong Ong, Ching Eng Png, Leonid Krivitsky<br>
-		<a href="https://doi.org/10.1364/OE.26.015232" class="publications">Optics Express 26, 15232-15246 (2018)</a>
+		<a href="https://doi.org/10.1364/OE.26.015232">Optics Express 26, 15232-15246 (2018)</a>
 			
 		<p>Simulation of Silicon Waveguide Single-Photon Avalanche Detectors for Integrated Quantum Photonics<br>
 		Salih Yanikgonul, Victor Leong, Jun Rong Ong, Ching Eng Png, Leonid Krivitsky<br>
-		<a href="https://doi.org/10.1109/JSTQE.2019.2938439" class="publications">IEEE Journal of Selected Topics in Quantum Electronics, 26, 2, 1-8, (2019)</a>
+		<a href="https://doi.org/10.1109/JSTQE.2019.2938439">IEEE Journal of Selected Topics in Quantum Electronics, 26, 2, 1-8, (2019)</a>
 
 		<p>Quantum State Filtering of Dual-rail Photons with Fiberized Plasmonic Metamaterial<br>
 		Salih Yanikgonul, Anton N Vetlugin, Ruixiang Guo, Angelos Xomalis, Giorgio Adamo, Cesare Soci, Nikolay I Zheludev<br>
-		<a href="https://doi.org/10.1364/CLEO_QELS.2019.FTu3D.7" class="publications">Conference on Lasers and Electro-Optics (CLEO): QELS_Fundamental Science, FTu3D. 7, 26, 2, 1-8, (2019)</a>
+		<a href="https://doi.org/10.1364/CLEO_QELS.2019.FTu3D.7">Conference on Lasers and Electro-Optics (CLEO): QELS_Fundamental Science, FTu3D. 7, 26, 2, 1-8, (2019)</a>
 
 	</div>
