--- a/cv/index.html
+++ b/cv/index.html
@@ -18,7 +18,7 @@ title: Salih Yanikgonul's CV
 		<h2>Select Publications</h2>
 		<p>2D Monte Carlo simulation of a silicon waveguide-based single-photon avalanche diode for visible wavelengths<br>
 		Salih Yanikgonul, Victor Leong, Jun Rong Ong, Ching Eng Png, Leonid Krivitsky<br>
-		<a href="https://doi.org/10.1364/OE.26.015232">Optics Express 26, 15232-15246 (2018)</a>
+		<a href="https://doi.org/10.1364/OE.26.015232" class="cv">Optics Express 26, 15232-15246 (2018)</a>
 			
 		<p>Simulation of Silicon Waveguide Single-Photon Avalanche Detectors for Integrated Quantum Photonics<br>
 		Salih Yanikgonul, Victor Leong, Jun Rong Ong, Ching Eng Png, Leonid Krivitsky<br>
