--- a/cv/index.html
+++ b/cv/index.html
@@ -16,7 +16,7 @@ title: Salih Yanikgonul's CV
 		</address>
 
 		<h2>Select Publications</h2>
-		<p>2D Monte Carlo simulation of a silicon waveguide-based single-photon avalanche diode for visible wavelengths<br>
+		<p class="publications">2D Monte Carlo simulation of a silicon waveguide-based single-photon avalanche diode for visible wavelengths<br>
 		Salih Yanikgonul, Victor Leong, Jun Rong Ong, Ching Eng Png, Leonid Krivitsky<br>
 		<a href="https://doi.org/10.1364/OE.26.015232" target="_blank" class="cv">Optics Express 26, 15232-15246 (2018)</a>
 			
