--- a/cv/index.html
+++ b/cv/index.html
@@ -16,15 +16,15 @@ title: Salih Yanikgonul's CV
 		</address>
 
 		<h2>Select Publications</h2>
-		<p class="publications">2D Monte Carlo simulation of a silicon waveguide-based single-photon avalanche diode for visible wavelengths<br>
+		<p class="publications"><strong>2D Monte Carlo simulation of a silicon waveguide-based single-photon avalanche diode for visible wavelengths</strong><br>
 		Salih Yanikgonul, Victor Leong, Jun Rong Ong, Ching Eng Png, Leonid Krivitsky<br>
 		<a href="https://doi.org/10.1364/OE.26.015232" target="_blank" class="cv">Optics Express 26, 15232-15246 (2018)</a>
 			
-		<p class="publications">Simulation of Silicon Waveguide Single-Photon Avalanche Detectors for Integrated Quantum Photonics<br>
+		<p class="publications"><strong>Simulation of Silicon Waveguide Single-Photon Avalanche Detectors for Integrated Quantum Photonics</strong><br>
 		Salih Yanikgonul, Victor Leong, Jun Rong Ong, Ching Eng Png, Leonid Krivitsky<br>
 		<a href="https://doi.org/10.1109/JSTQE.2019.2938439" target="_blank" class="cv">IEEE Journal of Selected Topics in Quantum Electronics, 26, 2, 1-8, (2019)</a>
 
-		<p class="publications">Quantum State Filtering of Dual-rail Photons with Fiberized Plasmonic Metamaterial<br>
+		<p class="publications"><strong>Quantum State Filtering of Dual-rail Photons with Fiberized Plasmonic Metamaterial</strong><br>
 		Salih Yanikgonul, Anton N Vetlugin, Ruixiang Guo, Angelos Xomalis, Giorgio Adamo, Cesare Soci, Nikolay I Zheludev<br>
 		<a href="https://doi.org/10.1364/CLEO_QELS.2019.FTu3D.7" target="_blank" class="cv">Conference on Lasers and Electro-Optics (CLEO): QELS_Fundamental Science, FTu3D. 7, 26, 2, 1-8, (2019)</a>
 
